tests/ui/endpoint/invalid_return_type.stderr
error[E0277]: the trait bound `FooResponse: ResponseSchema` is not satisfied
  --> tests/ui/endpoint/invalid_return_type.rs:12:18
   |
12 | fn endpoint() -> FooResponse {
   |                  ^^^^^^^^^^^ the trait `ResponseSchema` is not implemented for `FooResponse`
   |
   = help: the following other types implement trait `ResponseSchema`:
             NoContent
             Raw<T>
             Redirect
             Success<T>
             Pin<Box<(dyn Future<Output = Res> + Send + 'static)>>
             Result<NoContent, E>
             Result<Raw<T>, E>
             Result<Redirect, E>
             Result<R, E>
note: required by a bound in `gotham_restful::EndpointWithSchema::Output`
  --> src/endpoint.rs
   |
   |     #[openapi_bound(Output: crate::ResponseSchema)]
   |                             ^^^^^^^^^^^^^^^^^^^^^ required by this bound in `EndpointWithSchema::Output`
   |     type Output: IntoResponse + Send;
   |          ------ required by a bound in this associated type

error[E0277]: the trait bound `FooResponse: gotham_restful::IntoResponse` is not satisfied
  --> tests/ui/endpoint/invalid_return_type.rs:12:18
   |
12 | fn endpoint() -> FooResponse {
   |                  ^^^^^^^^^^^ the trait `gotham_restful::IntoResponse` is not implemented for `FooResponse`
   |
   = help: the following other types implement trait `gotham_restful::IntoResponse`:
             NoContent
             Raw<T>
             Redirect
             Success<T>
             gotham_restful::Response
             Pin<Box<(dyn Future<Output = Res> + Send + 'static)>>
             Result<NoContent, E>
             Result<Raw<T>, E>
           and $N others
note: required by a bound in `gotham_restful::EndpointWithSchema::Output`
  --> src/endpoint.rs
   |
   |     type Output: IntoResponse + Send;
   |                  ^^^^^^^^^^^^ required by this bound in `EndpointWithSchema::Output`
